Enable collecting data from network traffic

--- a/test/browser-tests/ok.html
+++ b/test/browser-tests/ok.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
 <head>
-<title>OK</title>
+<link rel='icon' href='data:;base64,iVBORw0KGgo='>
+  <title>OK</title>
 </head>
 <body>OK</body></html>
